--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Images/1.jpeg" alt="Los Angeles">
+      <img src="Images/s1.jpg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="Images/2.jpeg" alt="Chicago">
+      <img src="Images/s2.jpg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="Images/3.jpeg" alt="New York">
+      <img src="Images/s3.jpg" alt="">
     </div>
   </div>
 
