--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          Categories
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="onlineshopping.github.io/beejays.github.io/perfume.html" class="text-dark">Perfumes</a>
+          <a class="dropdown-item" href="beejays.github.io/perfume.html" class="text-dark">Perfumes</a>
           <a class="dropdown-item" href="#"></a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"></a>
