--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          Categories
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="beejays.github.io/perfume.html" class="text-dark">Perfumes</a>
+          <a class="dropdown-item" href="perfume.html" class="text-dark">Perfumes</a>
           <a class="dropdown-item" href="#"></a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"></a>
@@ -79,13 +79,13 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Images/s1.jpg" alt="">
+      <img src="perfume/1.jpg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="Images/s2.jpg" alt="">
+      <img src="perfume/2.jpg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="Images/s3.jpg" alt="">
+      <img src="perfume/3.jpg" alt="">
     </div>
   </div>
 
