--- a/perfume.html
+++ b/perfume.html
@@ -109,7 +109,7 @@
 
    		<div class="col-lg-4 col-md-4 col-12">
    			<div class="card">
-  <img class="card-img-top" src="Perfume/1.jpg" alt="Perfumes">
+  <img class="card-img-top" src="perfume/1.jpg" alt="Perfumes">
   <div class="card-body">
     <h4 class="card-title text-capitalize">Chanel</h4>
     <p class="card-text text-capitalize"></p>
@@ -120,7 +120,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
  <div class="card" >
-  <img class="card-img-top" src="Perfume/2.jpg" alt="kurti"  >
+  <img class="card-img-top" src="perfume/1.jpg" alt="kurti"  >
   <div class="card-body">
     <h4 class="card-title">Jo Malone</h4>
     <p class="card-text"></p>
@@ -131,7 +131,7 @@
 </div>
 <div class="col-lg-4 col-md-4 col-12">
  <div class="card" >
-  <img class="card-img-top" src="Perfume/3.jpg" alt="kurti">
+  <img class="card-img-top" src="perfume/1.jpg" alt="kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text"></p>
