--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="perfume/1.jpg" alt="">
+      <img src="images/s1.jpg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="perfume/2.jpg" alt="">
+      <img src="images/s2.jpg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="perfume/3.jpg" alt="">
+      <img src="images/s4.jpg" alt="">
     </div>
   </div>
 
