--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/s1.jpg" alt="">
+      <img src="images/1.jpg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="images/s2.jpg" alt="">
+      <img src="images/2.jpg" alt="">
     </div>
     <div class="carousel-item">
       <img src="images/s4.jpg" alt="">
@@ -112,7 +112,7 @@
 
    		<div class="col-lg-4 col-md-4 col-12">
    			<div class="card">
-  <img class="card-img-top" src="Kurti/1.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/2.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize">This is Very Great Kurti For Normal And Best pricing</p>
