--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/1.jpg" alt="">
+      <img src="images/1.jpeg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="images/2.jpg" alt="">
+      <img src="images/2.jpeg" alt="">
     </div>
     <div class="carousel-item">
       <img src="images/s4.jpg" alt="">
