--- a/watch.html
+++ b/watch.html
@@ -54,7 +54,309 @@
 
 	 <!-- nav bar end -->
 
+<!-- Image Slider Part Start -->
 
+<div id="demo" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/w1.jpg" alt="Los Angeles">
+    </div>
+    <div class="carousel-item">
+      <img src="images/w2.jpg" alt="Chicago">
+    </div>
+    <div class="carousel-item">
+      <img src="images/w3.jpg" alt="New York">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+
+</div>
+  </header>
+
+   <!-- image slider part end -->
+   <!-- card part start -->
+<section>
+   <div class="container">
+    <h1 class="text-center text-capitalize pt-5">Men Watches</h1>
+        <hr class="w-25 mx-auto pt-5 " >
+
+    <div class="row text-center mb-5" >
+
+      <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/1.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Accurist Chronograph Watch 7282 Accurist</p>
+    <h4>Price Rs 8,450</h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+ <div class="card" >
+  <img class="card-img-top" src="watch/2.jpg" alt="kurti" >
+  <div class="card-body">
+    <h4 class="card-title">Orange Lawn Kurti</h4>
+    <p class="card-text">Mens Hugo Boss Supernova Chronograph Watch 1513360 </p>
+     <h4>Price Rs 5400 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+</div>
+<div class="col-lg-4 col-md-4 col-12">
+ <div class="card" >
+  <img class="card-img-top" src="watch/3.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text">Casio G-Shock Premium Mudmaster Compass Watch GWG-1000-1A1ER
+Casio</p>
+     <h4>Price Rs 6999 </h4>
+    <a href="#" class="btn btn-dark">order Now</a>
+  </div>
+</div>
+  </div>
+  <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/4.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Casio Edifice Bluetooth Triple Connect Alarm Chronograph Watch EQB-800DB-1AER</p>
+    <h4>Price Rs 4800 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/5.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Unisex Gucci Le Marche des Merveilles Watch YA126493
+Gucci</p>
+    <h4>Price Rs 7999 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/6.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Hugo Boss Grand Prix GQ Man of the Year 2018 Chronograph Watch 1513578
+Hugo Boss</p>
+    <h4>Price Rs 6999 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/7.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Casio Edifice Bluetooth Triple Connect Toro Rosso Special Edition Alarm Chronograph Watch EQB-800TR-1AER
+Casio</p>
+    <h4>Price Rs 7400 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/8.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">HUGO Dare Watch 1530019
+HUGO</p>
+    <h4>Price Rs 4700 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/9.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Timex Watch TWF3C8330
+Timex</p>
+    <h4>Price Rs 6500 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/10.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Casio Premium G-Shock Mudmaster Twin Sensor Compass Alarm Chronograph Watch GG-1000-1AER
+Casio</p>
+    <h4>Price Rs 10,450 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/11.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Hugo Boss Oxygen Watch 1513596
+Hugo Boss</p>
+    <h4>Price Rs 1400 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/12.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Hugo Boss Oxygen Watch 15135008
+Hugo Boss</p>
+    <h4>Price Rs 6999 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/13.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Casio G-Shock G-Carbon Chronograph Gift Set Watch GA-2000E-4ER
+Casio</p>
+    <h4>Price Rs 1999 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/14.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Hugo Boss Signature Watch 1513643
+1513643</p>
+    <h4>Price Rs 2300 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/15.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Casio G-Shock Full Metal Limited Edition Bluetooth Tough Solar Watch GMW-B5000D-1ER
+Casio</p>
+    <h4>Price Rs 1899 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/16.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Hugo Boss Supernova Chronograph Watch 1513359
+Hugo Boss</p>
+    <h4>Price Rs 2899</h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/17.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Casio G-Shock Mudmaster Master Of G Alarm Chronograph Watch GG-1000-1A3ER
+GG-1000-1A3ER</p>
+    <h4>Price Rs 2999 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/18.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Rotary Watch GB00672/05
+Rotary</p>
+    <h4>Price Rs 7800 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/19.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Casio G-Shock G-Steel Watch GST-410-1AER
+GST-410-1AER</p>
+    <h4>Price Rs 3600 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/20.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Hugo Boss Signature Automatic Skeleton Watch 1513655
+Hugo Boss</p>
+    <h4>Price Rs 2500 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="watch/21.jpg" alt="watch">
+  <div class="card-body">
+    <h4 class="card-title">Watch</h4>
+    <p class="card-text text-capitalize">Mens Casio G-Shock Rangeman Bluetooth GPS Tough Solar Watch GPR-B1000-1ER
+Casio</p>
+    <h4>Price Rs 6700 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+
+</div>
+ 
+
+</div>
+
+    
+</section>
+
+<!-- card part end -->
 
 
 
