--- a/perfume.html
+++ b/perfume.html
@@ -41,7 +41,7 @@
          Categories
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#" class="text-dark">Kurti</a>
+          <a class="dropdown-item" href="watch.html" class="text-dark">Watches</a>
           <a class="dropdown-item" href="#"></a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"></a>
