--- a/watch.html
+++ b/watch.html
@@ -100,7 +100,7 @@
 
       <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/1.jpg" alt="Kurti">
+  <img class="card-img-top" src="1.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Accurist Chronograph Watch 7282 Accurist</p>
@@ -111,7 +111,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
  <div class="card" >
-  <img class="card-img-top" src="watch/2.jpg" alt="kurti" >
+  <img class="card-img-top" src="2.jpg" alt="kurti" >
   <div class="card-body">
     <h4 class="card-title">Orange Lawn Kurti</h4>
     <p class="card-text">Mens Hugo Boss Supernova Chronograph Watch 1513360 </p>
@@ -122,7 +122,7 @@
 </div>
 <div class="col-lg-4 col-md-4 col-12">
  <div class="card" >
-  <img class="card-img-top" src="watch/3.jpg" alt="watch">
+  <img class="card-img-top" src="3.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text">Casio G-Shock Premium Mudmaster Compass Watch GWG-1000-1A1ER
@@ -134,7 +134,7 @@ Casio</p>
   </div>
   <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/4.jpg" alt="watch">
+  <img class="card-img-top" src="4.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Casio Edifice Bluetooth Triple Connect Alarm Chronograph Watch EQB-800DB-1AER</p>
@@ -145,7 +145,7 @@ Casio</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/5.jpg" alt="watch">
+  <img class="card-img-top" src="5.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Unisex Gucci Le Marche des Merveilles Watch YA126493
@@ -157,7 +157,7 @@ Gucci</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/6.jpg" alt="watch">
+  <img class="card-img-top" src="6.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Hugo Boss Grand Prix GQ Man of the Year 2018 Chronograph Watch 1513578
@@ -169,7 +169,7 @@ Hugo Boss</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/7.jpg" alt="watch">
+  <img class="card-img-top" src="7.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Casio Edifice Bluetooth Triple Connect Toro Rosso Special Edition Alarm Chronograph Watch EQB-800TR-1AER
@@ -181,7 +181,7 @@ Casio</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/8.jpg" alt="watch">
+  <img class="card-img-top" src="8.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">HUGO Dare Watch 1530019
@@ -193,7 +193,7 @@ HUGO</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/9.jpg" alt="watch">
+  <img class="card-img-top" src="9.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Timex Watch TWF3C8330
@@ -205,7 +205,7 @@ Timex</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/10.jpg" alt="watch">
+  <img class="card-img-top" src="10.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Casio Premium G-Shock Mudmaster Twin Sensor Compass Alarm Chronograph Watch GG-1000-1AER
@@ -217,7 +217,7 @@ Casio</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/11.jpg" alt="watch">
+  <img class="card-img-top" src="11.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Hugo Boss Oxygen Watch 1513596
@@ -229,7 +229,7 @@ Hugo Boss</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/12.jpg" alt="watch">
+  <img class="card-img-top" src="12.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Hugo Boss Oxygen Watch 15135008
@@ -241,7 +241,7 @@ Hugo Boss</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/13.jpg" alt="watch">
+  <img class="card-img-top" src="13.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Casio G-Shock G-Carbon Chronograph Gift Set Watch GA-2000E-4ER
@@ -253,7 +253,7 @@ Casio</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/14.jpg" alt="watch">
+  <img class="card-img-top" src="14.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Hugo Boss Signature Watch 1513643
@@ -265,7 +265,7 @@ Casio</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/15.jpg" alt="watch">
+  <img class="card-img-top" src="15.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Casio G-Shock Full Metal Limited Edition Bluetooth Tough Solar Watch GMW-B5000D-1ER
@@ -277,7 +277,7 @@ Casio</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/16.jpg" alt="watch">
+  <img class="card-img-top" src="16.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Hugo Boss Supernova Chronograph Watch 1513359
@@ -289,7 +289,7 @@ Hugo Boss</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/17.jpg" alt="watch">
+  <img class="card-img-top" src="17.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Casio G-Shock Mudmaster Master Of G Alarm Chronograph Watch GG-1000-1A3ER
@@ -301,7 +301,7 @@ GG-1000-1A3ER</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/18.jpg" alt="watch">
+  <img class="card-img-top" src="18.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Rotary Watch GB00672/05
@@ -313,7 +313,7 @@ Rotary</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/19.jpg" alt="watch">
+  <img class="card-img-top" src="19.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Casio G-Shock G-Steel Watch GST-410-1AER
@@ -325,7 +325,7 @@ GST-410-1AER</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/20.jpg" alt="watch">
+  <img class="card-img-top" src="20.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Hugo Boss Signature Automatic Skeleton Watch 1513655
@@ -337,7 +337,7 @@ Hugo Boss</p>
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="watch/21.jpg" alt="watch">
+  <img class="card-img-top" src="21.jpg" alt="watch">
   <div class="card-body">
     <h4 class="card-title">Watch</h4>
     <p class="card-text text-capitalize">Mens Casio G-Shock Rangeman Bluetooth GPS Tough Solar Watch GPR-B1000-1ER
