--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="perfume.html" class="text-dark">Perfumes</a>
-          <a class="dropdown-item" href="#"></a>
+          <a class="dropdown-item" href="watch.html">Watches</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"></a>
         </div>
