--- a/watch.html
+++ b/watch.html
@@ -68,13 +68,13 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/w1.jpg" alt="Los Angeles">
+      <img src="images/w1.jpg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="images/w2.jpg" alt="Chicago">
+      <img src="images/w2.jpg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="images/w3.jpg" alt="New York">
+      <img src="images/w3.jpg" alt="">
     </div>
   </div>
 
