--- a/watch.html
+++ b/watch.html
@@ -13,7 +13,7 @@
 	<!-- nav bar start -->
 	<header>
   	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">
+  <a class="navbar-brand" href="perfume.html">
   <img src="logo/2.png" width="60" height="60" class="d-inline-block align-top" alt="logo">
   </a>
    
@@ -74,7 +74,7 @@
       <img src="images/w2.jpg" alt="">
     </div>
     <div class="carousel-item">
-      <img src="images/w3.jpg" alt="">
+      <img src="images/w4.jpg" alt="">
     </div>
   </div>
 
