--- a/index.html
+++ b/index.html
@@ -143,8 +143,218 @@
   </div>
 </div>
   </div>
+		<div class="col-lg-4 col-md-4 col-12">
+ <div class="card" >
+  <img class="card-img-top" src="kurti/3.jpg" alt="kurti">
+  <div class="card-body">
+    <h4 class="card-title">Gray Lawn Kurti</h4>
+    <p class="card-text"></p>
+     <h4>Price Rs 6999 </h4>
+    <a href="#" class="btn btn-dark">order Now</a>
+  </div>
+</div>
+  </div>
+  <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="kurti/4.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 4800 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/5.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 7999 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/6.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 6999 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/7.jpeg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 7400 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/8.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 4700 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/9.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 6500 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/10.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 10,450 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/11.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 1400 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/12.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 6999 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/13.jpeg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 1999 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/14.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 2300 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/15.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 1899 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/16.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 2899</h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/17.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 2999 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/18.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 7800 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/19.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 3600 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/20.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 2500 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
+ <div class="col-lg-4 col-md-4 col-12">
+        <div class="card">
+  <img class="card-img-top" src="Kurti/21.jpg" alt="Kurti">
+  <div class="card-body">
+    <h4 class="card-title">Blue Lawn Kurti</h4>
+    <p class="card-text text-capitalize"></p>
+    <h4>Price Rs 6700 </h4>
+    <a href="#" class="btn btn-dark">Order Now</a>
+  </div>
+</div>
+ </div>
  
 
+	   </div>
 </div>
 
    	
