--- a/watch.html
+++ b/watch.html
@@ -8,6 +8,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
+	 <style>
+  .carousel-inner img
+  {
+    height: 100%;
+    width: 100%;
+  }
+</style>
 <body>
 
 	<!-- nav bar start -->
