--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/5.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/5.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -178,7 +178,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/6.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/6.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -189,7 +189,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/7.jpeg" alt="Kurti">
+  <img class="card-img-top" src="kurti/7.jpeg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -200,7 +200,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/8.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/8.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -211,7 +211,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/9.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/9.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -222,7 +222,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/10.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/10.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -233,7 +233,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/11.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/11.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -244,7 +244,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/12.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/12.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -255,7 +255,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/13.jpeg" alt="Kurti">
+  <img class="card-img-top" src="kurti/13.jpeg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -266,7 +266,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/14.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/14.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -277,7 +277,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/15.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/15.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -288,7 +288,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/16.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/16.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -299,7 +299,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/17.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/17.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -310,7 +310,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/18.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/18.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -321,7 +321,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/19.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/19.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -332,7 +332,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/20.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/20.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
@@ -343,7 +343,7 @@
  </div>
  <div class="col-lg-4 col-md-4 col-12">
         <div class="card">
-  <img class="card-img-top" src="Kurti/21.jpg" alt="Kurti">
+  <img class="card-img-top" src="kurti/21.jpg" alt="Kurti">
   <div class="card-body">
     <h4 class="card-title">Blue Lawn Kurti</h4>
     <p class="card-text text-capitalize"></p>
